# arxiv-paper-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml  train.py
.dvc/: config
arxiv_paper_classifier/: commands.py
arxiv_paper_classifier/data/: datamodule.py  dataset.py  preprocessing.py
arxiv_paper_classifier/models/: baseline.py  factory.py  hierarchical_head.py  transformer_encoder.py
arxiv_paper_classifier/training/: callbacks.py  lightning_module.py
arxiv_paper_classifier/utils/: dvc_utils.py  label_utils.py  mlflow_utils.py
configs/: config.yaml
configs/data/: arxiv.yaml
configs/dvc/: default.yaml
configs/mlflow/: default.yaml
configs/model/: baseline.yaml  transformer.yaml
configs/preprocessing/: default.yaml
configs/training/: default.yaml
