[project]
name = "arxiv-paper-classifier"
version = "0.1.0"
description = "Multi-label hierarchical text classification of arXiv paper abstracts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "lightning>=2.2.0",
    "torchmetrics>=1.3.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "mlflow>=2.11.0",
    "dvc>=3.48.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "fire>=0.6.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arxiv_paper_classifier"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N812"]

[tool.ruff.lint.isort]
known-first-party = ["arxiv_paper_classifier"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
